--- a/css/style.css
+++ b/css/style.css
@@ -137,10 +137,7 @@ body {
 #contact{
   text-align: center;
 }
-.logo {
-  max-width: 150px;
-  min-width: 641px;
-}
+
 /* Layout styling */
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
@@ -203,8 +200,7 @@ footer {
   .navtoggle li:not(:last-child) {
     display: none;
   }
-
-  
+ 
 
   .navtoggle.navtoggle.responsive {
     position: relative;
@@ -271,6 +267,10 @@ Medium devices (640px and larger)
   
   .navtoggle li:not(:last-child) {
     display: inline-block;
+  }
+
+  .navtoggle li:last-child{
+    display:none;
   }
 
   nav>ul>li>a {
