Prettier/hint linters added
added linters to the html pages

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,9 @@ footer {
   padding: 0 0 10px;
 }
 
+.project-2{
+  width: 100%;
+}
 
   /* ==============================
 Medium devices (640px and larger)
